5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4029/executions/1684_1100.log
== TEST (2019-04-27 10:53:03) 
-- CODE:
var = int(input("Digite o valor da cedula: "))

if (var == 2):
	txt = "Tartaruga"
elif (var == 5):
	txt = "Garca"
elif (var == 10):
	txt = "Arara"
elif (var == 20):
	txt = "Mico-leao-dourado"
elif (var == 50):
	txt = "Onca-pintada"
elif (var == 100)
	txt = "Garoupa"
else:
	txt = "Invalido"

print("Entrada: ", var)
print("Animal: ", txt)

-- ERROR:
File "XXXX", line 13
    elif (var == 100)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 10:53:18) 
-- CODE:
var = int(input("Digite o valor da cedula: "))

if (var == 2):
	txt = "Tartaruga"
elif (var == 5):
	txt = "Garca"
elif (var == 10):
	txt = "Arara"
elif (var == 20):
	txt = "Mico-leao-dourado"
elif (var == 50):
	txt = "Onca-pintada"
elif (var == 100):
	txt = "Garoupa"
else:
	txt = "Invalido"

print("Entrada: ", var)
print("Animal: ", txt)

-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 10:53:28) 
-- CODE:
var = int(input("Digite o valor da cedula: "))

if (var == 2):
	txt = "Tartaruga"
elif (var == 5):
	txt = "Garca"
elif (var == 10):
	txt = "Arara"
elif (var == 20):
	txt = "Mico-leao-dourado"
elif (var == 50):
	txt = "Onca-pintada"
elif (var == 100):
	txt = "Garoupa"
else:
	txt = "Invalido"

print("Entrada: ", var)
print("Animal: ", txt)

-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 10:53:34) 
-- CODE:
var = int(input("Digite o valor da cedula: "))

if (var == 2):
	txt = "Tartaruga"
elif (var == 5):
	txt = "Garca"
elif (var == 10):
	txt = "Arara"
elif (var == 20):
	txt = "Mico-leao-dourado"
elif (var == 50):
	txt = "Onca-pintada"
elif (var == 100):
	txt = "Garoupa"
else:
	txt = "Invalido"

print("Entrada: ", var)
print("Animal: ", txt)

-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 10:53:40) 
-- CODE:
var = int(input("Digite o valor da cedula: "))

if (var == 2):
	txt = "Tartaruga"
elif (var == 5):
	txt = "Garca"
elif (var == 10):
	txt = "Arara"
elif (var == 20):
	txt = "Mico-leao-dourado"
elif (var == 50):
	txt = "Onca-pintada"
elif (var == 100):
	txt = "Garoupa"
else:
	txt = "Invalido"

print("Entrada: ", var)
print("Animal: ", txt)

-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 10:54:04) 
-- CODE:
var = int(input("Digite o valor da cedula: "))

if (var == 2):
	txt = "Tartaruga"
elif (var == 5):
	txt = "Garca"
elif (var == 10):
	txt = "Arara"
elif (var == 20):
	txt = "Mico-leao-dourado"
elif (var == 50):
	txt = "Onca-pintada"
elif (var == 100):
	txt = "Garoupa"
else:
	txt = "Invalido"

print("Entrada: ", var)
print("Animal: ", txt)

-- EXECUTION TIME:
0.215255
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal:  Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal:  Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
